# hubs-bot

./: .envrc.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: docker.yml  pull-request.yml
hubs_bot/: __init__.py  __main__.py  app.py  categorizer.py  config.py  context.py  summarizer.py
tests/: app_test.py  config_test.py  conftest.py  context_test.py
tests/cassettes/app_test/: test_bot_run.yaml  test_bot_with_real_duplicate_link.yaml
tests/cassettes/categorizer_test/: test_categorizer.yaml
