[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hubs_bot"
version = "1.0.0"
authors = ["Markis Taylor <m@rkis.net>"]
description = "Hudson news bot for r/HudsonOH"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
praw = "^7.7.1"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.4.1"
ruff = "^0.0.282"
types-requests = "^2.28.11.15"

[tool.poetry.group.test.dependencies]
coverage = {extras = ["toml"], version = "^7.2.1"}
hypothesis = "^6.82.0"
pytest = "^7.2.2"
pytest-cov = "^4.1.0"
pytest-recording = "^0.13.0"

[tool.coverage.run]
source = ["hubs_bot/"]
omit = ["*/__main__.py"]

[tool.pytest.ini_options]
addopts = "-ra --cov hubs_bot"
testpaths = ["tests"]
markers = [
  "unit",
  "integration"
]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
  "A", "ARG", "B", "BLE", "C4", "C90", "COM818", "DTZ", "EM", "ERA", "EXE", "E", "FA", "FBT", "F", "FIX", "G", "I",
  "ICN", "INP", "INT", "I", "ISC", "PGH", "PIE", "PL", "PTH", "PYI", "PT", "Q", "Q", "RET", "RSE", "RUF", "SIM",
  "SLOT", "SLF", "S", "T10", "T20", "TD", "TRY", "TCH", "UP", "UP", "W", "YTT"
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["ARG", "PLR0913", "S"]

